fix keys alignments in responsive mode

--- a/stylesheets/home-page.css
+++ b/stylesheets/home-page.css
@@ -72,6 +72,8 @@
 #keys {
 	margin: 2rem;
 	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #keys a {
